--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "fluent-ffmpeg": "^2.1.3",
     "ytdl-core": "^4.11.5"
   }
 }
